init whitelist feature
